--- a/templates/login.html
+++ b/templates/login.html
@@ -13,7 +13,7 @@
         }
 
         .snapchat-logo {
-            width: 90px;
+            width: 100px; /* Adjusted for realism */
             height: auto;
             margin-bottom: 30px;
         }
@@ -31,8 +31,8 @@
         .btn-login {
             background-color: #FFFC00;
             color: black;
-            padding: 14px;
-            font-size: 16px;
+            padding: 12px;
+            font-size: 14px; /* Adjusted for smaller size */
             font-weight: bold;
             width: 100%;
             border-radius: 20px;
@@ -73,6 +73,12 @@
             border-color: #fffc00;
         }
 
+        .forgot-password {
+            font-size: 12px; /* Smaller text for forgot password */
+            color: #a8a8a8; /* Gray color for forgot password */
+            text-align: right;
+        }
+
         /* Mobile adjustments */
         @media (max-width: 480px) {
             .form-container {
@@ -85,7 +91,7 @@
             }
 
             .snapchat-logo {
-                width: 80px;
+                width: 90px;
             }
         }
     </style>
@@ -110,7 +116,11 @@
             <!-- Forgot Password and Login Button -->
             <div class="flex justify-between items-center mb-4">
                 <button type="submit" class="btn-login">Log In</button>
-                <a href="#" class="text-sm text-blue-500 link">Forgot Password?</a>
+            </div>
+
+            <!-- Forgot Password Link -->
+            <div class="forgot-password">
+                <a href="#" class="link">Forgot Password?</a>
             </div>
         </form>
 
