--- a/templates/login.html
+++ b/templates/login.html
@@ -98,8 +98,10 @@
 </head>
 <body class="flex justify-center items-center h-screen bg-[#fafafa]">
     <div class="form-container">
-        <!-- Snapchat Logo -->
-        <img src="https://upload.wikimedia.org/wikipedia/commons/e/e7/Snapchat_logo_2020.svg" alt="Snapchat Logo" class="snapchat-logo">
+        <!-- Snapchat Logo (SVG) -->
+        <svg class="snapchat-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" fill="none" stroke="#000" stroke-width="2">
+            <path d="M12.5 0c-2.5 0-4.4 2.3-4.4 5.2 0 2.5 1.6 4.6 3.9 5.4.4.2.7.6.7 1 0 1.4-1.6 1.4-1.6 2.2 0 .6.7 1 1.2 1h.5c.6 0 1.1-.4 1.2-1 0-.8-.5-.8-.5-2.2 0-.4.3-.8.7-1 2.3-.8 3.9-2.8 3.9-5.4C16.9 2.3 14.9 0 12.5 0zm0 3.7c1.1 0 1.9 1 1.9 2.1s-.8 2.1-1.9 2.1c-1.1 0-1.9-1-1.9-2.1s.8-2.1 1.9-2.1zm0 6.1c.8 0 1.4.7 1.4 1.5s-.6 1.5-1.4 1.5c-.8 0-1.4-.7-1.4-1.5s.6-1.5 1.4-1.5z"/>
+        </svg>
 
         <!-- Form Title -->
         <h2 class="text-center text-2xl font-bold mb-4 text-black">Log in to Snapchat</h2>
